--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,10 +43,11 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.16'
-      - uses: actions/checkout@v3
+          go-version-file: 'go.mod'
+          cache: true
       - run: go generate ./...
       - name: git diff
         run: |
